added further detect rules

--- a/point/noun_이야말로_야말로.yaml
+++ b/point/noun_이야말로_야말로.yaml
@@ -15,4 +15,5 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/운동이야말로_가장_중요한_것이라고_생각해요__2024-04-13.mp3
 metadata:
   type: noun
+  detect: 이야말로:JX
 details: |-
