--- a/point/verb_든지.yaml
+++ b/point/verb_든지.yaml
@@ -15,6 +15,7 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/대학교에_진학하든지_진학하지_않든지_열심히_공부해야_돼요__2024-03-31.mp3
 metadata:
   type: verb
+  detect: 든지:EC
 details: |-
   # Interrogative words {#interrogative-words}
 
