--- a/point/noun_이다.yaml
+++ b/point/noun_이다.yaml
@@ -15,7 +15,8 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/오늘은_내_친구_생일이에요__2024-03-31.mp3
 metadata:
   type: noun
-  # detect: 이:VCP - unsure if this should collapse with nouns
+  detect: 이:VCP
+  detect_post: verb
 details: |-
   # Common conjugation {#conjugation}
 
