--- a/point/verb_다면서_라면서_다며.yaml
+++ b/point/verb_다면서_라면서_다며.yaml
@@ -19,6 +19,7 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/벌써_다_끝났다면서요__2024-04-13.mp3
 metadata:
   type: verb
+  detect: 다면:EC|ᆫ다면:EC|는다면:EC
 details: |-
   # With nouns {#nouns}
 
