--- a/point/verb_라고.yaml
+++ b/point/verb_라고.yaml
@@ -31,6 +31,7 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/의사가_매운_음식을_먹지_말라고_했다__2024-04-13.mp3
 metadata:
   type: verb
+  detect: 라고:EC
 details: |-
   # Usage {#usage}
 
