--- a/point/verb_습니다_ㅂ니다.yaml
+++ b/point/verb_습니다_ㅂ니다.yaml
@@ -19,5 +19,5 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/저를_살려_주신_은혜를_꼭_갚고_싶습니다__2024-04-13.mp3
 metadata:
   type: verb
-  detect: ㅂ니다:EF|습니다:EF
+  detect:  ᆸ니다:EF|습니다:EF|ᆸ니다:EC|습니다:EC
 details: |-
