--- a/point/verb_으나.yaml
+++ b/point/verb_으나.yaml
@@ -47,4 +47,5 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/그_정치인은_유명하나_실질적인_변화를_이끌지_못해요__2024-12-19.mp3
 metadata:
   type: verb
+  detect: 나:EC|으나:EC
 details: |-
