--- a/point/verb_어야지.yaml
+++ b/point/verb_어야지.yaml
@@ -19,5 +19,5 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/대통령이_연설를_하시니까_꼭_가야지요__2024-09-05.mp3
 metadata:
   type: verb
-  detect: 어야지:EF # TODO: Handle 어야지요:EF
+  detect: 어야지:EF
 details: |-
