--- a/point/고_나면.yaml
+++ b/point/고_나면.yaml
@@ -14,7 +14,8 @@ definitions:
         translated: After exercising, I take a shower.
         audio_url: https://r2.kimchi-reader.app/grammar/운동을_하고_나면_샤워를_합니다__2024-07-25.mp3
 metadata:
-  type: composite
+  type: verb
+  detect: 고:EC 나:VX+면:EC
 details: |-
   # Usage {#usage}
 
