--- a/point/으로_인하다.yaml
+++ b/point/으로_인하다.yaml
@@ -22,5 +22,7 @@ definitions:
         translated: The work was delayed because of computer problems.
         audio_url: https://r2.kimchi-reader.app/grammar/컴퓨터_문제로_인해_작업이_지연되었습니다__2024-12-19.mp3
 metadata:
-  type: composite
+  type: noun
+  detect: 로:JKB 인하:VV|으로:JKB 인하:VV
+  detect_post: verb
 details: |-
