--- a/point/으면_안_되다.yaml
+++ b/point/으면_안_되다.yaml
@@ -18,7 +18,8 @@ definitions:
         translated: You may not cross the street now.
         audio_url: https://r2.kimchi-reader.app/grammar/지금_길을_건너면_안_돼요__2024-05-15.mp3
 metadata:
-  type: composite
+  type: verb
+  detect: 면:EC 안:MAG 되:VV|으면:EC 안:MAG 되:VV
 details: |-
   # Double Negative {#double-negative}
 
