--- a/point/을_만하다.yaml
+++ b/point/을_만하다.yaml
@@ -14,5 +14,6 @@ definitions:
         translated: Korean is worth studying.
         audio_url: https://r2.kimchi-reader.app/grammar/한국어는_공부할_만해요__2024-07-30.mp3
 metadata:
-  type: composite
+  type: verb
+  detect: ᆯ:ETM 만:NNB+하:XSA|을:ETM 만:NNB+하:XSA
 details: |-
