--- a/point/verb_거니.yaml
+++ b/point/verb_거니.yaml
@@ -45,4 +45,5 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/사람들이_모임에_오거니_가거니_합니다__2024-10-25.mp3
 metadata:
   type: verb
+  detect: 거니:EC|거니와:EC
 details: |-
