--- a/point/verb_는다기보다는.yaml
+++ b/point/verb_는다기보다는.yaml
@@ -15,4 +15,5 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/그_가수가_유명하다기보다는_독특한_목소리로_알려져_있어요__2024-05-27.mp3
 metadata:
   type: verb
+  detect: 다기:ETN+보다:JKB+는:JX
 details: |-
