--- a/point/verb_는다는_ㄴ다는_다는_라는.yaml
+++ b/point/verb_는다는_ㄴ다는_다는_라는.yaml
@@ -15,5 +15,6 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/주연_씨_결혼한다는_소식_들었어요__2024-04-13.mp3
 metadata:
   type: verb
+  detect: ᆫ다는:ETM
 details: |-
   This is an abbreviation of <f>다[고 하]는</f> and <f>(이)라[고 하]는</f>, can be shortened even further with <f>란</f>.
