--- a/point/verb_잖아.yaml
+++ b/point/verb_잖아.yaml
@@ -15,4 +15,5 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/그렇게_싸우지_말고_사이좋게_지내_둘이_친구잖아__2024-04-13.mp3
 metadata:
   type: verb
+  detect: 잖아:EF
 details: |-
