--- a/point/ㄹ_뻔하다.yaml
+++ b/point/ㄹ_뻔하다.yaml
@@ -18,5 +18,6 @@ definitions:
         translated: It was so cold, I almost die.
         audio_url: https://r2.kimchi-reader.app/grammar/너무_추워서_죽을_뻔했어요__2024-05-26.mp3
 metadata:
-  type: composite
+  type: verb
+  detect: ᆯ:ETM 뻔:NNB+하:XSA|을:ETM 뻔:NNB+하:XSA
 details: |-
