--- a/point/게_되다.yaml
+++ b/point/게_되다.yaml
@@ -18,5 +18,6 @@ definitions:
         translated: I didn't eat mushrooms, but I ended up eating them.
         audio_url: https://r2.kimchi-reader.app/grammar/저는_버섯을_안_먹었었는데_먹게_됐어요__2024-05-15.mp3
 metadata:
-  type: composite
+  type: verb
+  detect: 게:EC 되:VV
 details: |-
