--- a/point/noun_되다.yaml
+++ b/point/noun_되다.yaml
@@ -31,6 +31,8 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/여기서_사진을_찍어도_돼요__2025-04-17.mp3
 metadata:
   type: noun
+  detect: 되:XSV|되:XSA
+  detect_post: verb
 details: |-
   # Usage {#usage}
 
