--- a/point/noun_하다.yaml
+++ b/point/noun_하다.yaml
@@ -35,6 +35,8 @@ definitions:
         audio_url: https://r2.kimchi-reader.app/grammar/그_일은_제가_할_게요__2025-04-17.mp3
 metadata:
   type: noun
+  detect: 하:XSV|하:XSA
+  detect_post: verb
 details: |-
   # Usage {#usage}
 
